[web] Add: Fix z-index overlay bug, two absolute element should not have same relative parent, so set a relative parent for header

--- a/source/web/src/static/styles/howItWorks.less
+++ b/source/web/src/static/styles/howItWorks.less
@@ -4,6 +4,13 @@
     box-sizing: border-box;
 }
 
+.siteHeader_wrapper {
+    @media @phone {
+        position:relative;
+    }
+
+}
+
 .siteHeader_phone {
     @media @phone {
         display: none;
